# QC-Image-Viewer-GUI

./: .gitignore  CMakeLists.txt  Header.h  Image Viewer.sln  Image Viewer.vcxproj  Image Viewer.vcxproj.filters  MainImagePanel.cpp  MainImagePanel.h  MyApp.cpp  MyApp.h  README.md  Source.cpp  cpp.hint  wxWidgets.sln
include/: Console.h  DisplaySelector.h  Header.h  MainImagePanel.h  MyApp.h  MyFrame.h
src/: Console.cpp  DisplaySelector.cpp  MainImagePanel.cpp  MyApp.cpp  MyFrame.cpp  Source.cpp  lodepng.cpp  main.cpp
